Fixed display of articles on smaller screens.

--- a/src/app/assets/scss/partials/_articles.scss
+++ b/src/app/assets/scss/partials/_articles.scss
@@ -19,7 +19,7 @@
 		width: 150px;
 		text-align: center;
 		@media (min-width: $grid-float-breakpoint) and (max-width: $screen-sm-max) {
-			margin-top: 30px;
+			margin-top: 50px;
 		}
 	}
 
